--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,94 @@
+/* base */
 body,
 html {
   background-color: #011627;
   font-family: "Fira Code";
   color: white;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+code {
+  font-family: "Fira Mono";
 }
 
 a {
   color: white;
 }
 
-.dh-stack {
+/* navigo link */
+a[data-navigo] {
+  font-size: 1.75rem;
+  text-decoration: none;
+}
+
+a[data-navigo]:hover {
+  text-decoration: underline;
+}
+
+/* stack */
+[class^="dio-stack"] > * {
+  margin-top: 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.dio-stack > * + *,
+.dio-stack--small > * + * {
+  margin-top: 1.5rem;
+}
+
+.dio-stack--large > * + * {
+  margin-top: 3rem;
+}
+
+/* columns */
+[class^="dio-columns"] {
+  display: flex;
+  flex-direction: row;
+}
+
+.dio-columns--gap-1 > * + * {
+  margin-left: 1rem;
+}
+
+.dio-column {
+  display: flex;
+  flex-direction: column;
+}
+
+/* alignment/placement */
+.dio-align--center {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.dio-width--fill {
+  width: 100%;
+  flex-grow: 1;
+}
+
+.dio-height--fill {
+  height: 100%;
+  flex-grow: 1;
+}
+
+/* slides */
+main[data-id] {
+  transition: transform 0.5s ease-out;
+  transform: translateX(0%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
