--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,12 @@ a {
 a[data-navigo] {
   font-size: 1.75rem;
   text-decoration: none;
+  color: #ffffff1c;
 }
 
 a[data-navigo]:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  color: white;
 }
 
 /* stack */
